# cookiecutter-python-uv

./: AGENTS.md  README.md  cookiecutter.json  copier.yml  pyproject.toml
template/: .pre-commit-config.yaml.jinja  README.md.jinja
template/src/{{project_slug}}/: main.py.jinja
template/tests/: test_main.py.jinja
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.toml.tmp
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
{{project_slug}}/: .gitignore  pyproject.toml
{{project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
