# pyproject.toml
# This file defines your project's metadata, dependencies, and build system.
# It's the modern standard for Python projects.

[tool.poetry]
name = "{{ cookiecutter.project_slug }}" # Project name, templated by Cookiecutter
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}" # Project description, templated
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"] # Author info, templated
license = "{{ cookiecutter.license }}" # License, templated
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}" # Python version, templated

# Core AI/ML libraries
numpy = "^1.26.0"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
# Development tools
pytest = "^8.0.0" # For testing
black = "^24.2.0" # For code formatting
ruff = "^0.3.0" # For linting (fast alternative to Flake8)
ipykernel = "^6.29.0" # For Jupyter notebooks
jupyter = "^1.0.0" # Jupyter environment
pre-commit = "^3.6.0" # For managing Git hooks

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "C", "B", "Q", "T"] # Common linting rules
ignore = ["E501"] # Ignore line length for Ruff, let Black handle it

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]